# chatbot-gradiente

./: pyproject.toml
data/: 20230430_legislaciones.json  20230430_legislaciones_preprocessed.jsonl
hashira/: config.yaml  prompt_ai_conversation.txt  text_extractor.py  utils.py
